# Study-Stuff

./: README.md
Computer Vision/: README.md
Computer Vision/Notes/Key-Techniques-Summary/: README.md
Fuzzy Logic/: README.md
Fuzzy Logic/Past Paper Answers/: 2015answers.md  2016answers.md  2017solution.md
Haskell/: README.md
Haskell/Notes/: Topics-In-Functional-CheatSheet.md
Haskell/Study-Programs/: README.md  do-translation.lhs
Haskell/Study-Programs/Advanced-Type-Systems-Demo/: GADTs.lhs  Phantom.lhs
Haskell/Study-Programs/PastPaper2014/: .gitignore  ChangeLog.md  Question1.lhs  README.md  package.yaml
Haskell/Study-Programs/Transformers/: README.md  TransError.hs  TransState.hs  TransWriter.hs
Haskell/Study-Programs/calc/: calc.cabal
Haskell/Study-Programs/calc/.stack-work/install/69301fa4/flag-cache/: calc-0.1.0.0-HJik94T9TXsBdohcb0lCdN  monadplus-1.4.2-2ERtKUk4oqnFyEsMccifZI
Haskell/Study-Programs/calc/.stack-work/install/69301fa4/lib/x86_64-windows-ghc-8.0.2/calc-0.1.0.0-9Oq6hdcIFCX6Vb7F86N9Ql/: Arithmetic.hi
Haskell/Study-Programs/calc/.stack-work/install/69301fa4/lib/x86_64-windows-ghc-8.0.2/calc-0.1.0.0-HJik94T9TXsBdohcb0lCdN/: Lib.hi
Haskell/Study-Programs/calc/.stack-work/install/69301fa4/pkgdb/: calc-0.1.0.0-9Oq6hdcIFCX6Vb7F86N9Ql.conf  package.cache
Haskell/Study-Programs/calc/app/: Main.hs
Haskell/Study-Programs/calc/src/: Arithmetic.hs  Lib.hs
Machine Learning/: README.md
Machine Learning/Notes/: 10. CI.md  7. Unsupervised.md  8. Recommenders.md  9. Neural Nets.md  Key-Points.md
(+13 files in other folders)
