name:                calc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/calc#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , transformers
                     , monadplus
  exposed-modules:     Lib
                     , Arithmetic
  default-language:    Haskell2010

executable calc
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , calc
                     , transformers
